--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   flutter_launcher_icons: ^0.13.1
-  flex_color_scheme: ^7.1.2
+  flex_color_scheme: ^7.3.1
   flutter_easyloading: ^3.0.5
   uuid: ^4.2.1
   path_provider: ^2.1.1
@@ -117,7 +117,7 @@ dependencies:
   markdown_widget: ^2.3.2+2
   # https://pub.dev/packages/flutter_math_fork
   flutter_math_fork: ^0.7.2
-
+  #dart_openai: ^5.0.0
   # https://pub.dev/packages/rich_text_view
   # rich_text_view: ^1.3.0
   # https://pub.dev/packages/easy_rich_text
@@ -134,7 +134,7 @@ dependencies:
   dart_openai:
     # path: ../dart_openai
     git:
-      url: https://github.com/geeker-ai/dart_openai.git
+      url: https://github.com/lnliyuyang/dart_openai.git
       ref: main
 
   # https://pub.dev/packages/openai_dart
